Changing initial background colour (preventing flickering)

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -96,7 +96,7 @@ a {
 .hero {
     color: $primary;
 
-    background: #fbcab8;
+    background: #8f57e2;
     background: $background-gradient;
 }
 
